<?xml version="1.0" encoding="utf-8"?>
<!-- res/menu/nav_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map"/>

        <item
            android:id="@+id/nav_list"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_list"/>

        <item
            android:id="@+id/nav_add"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_add"/>

        <item
            android:id="@+id/nav_stats"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_stats"/>
    </group>

</menu>